Data , Repository , Domain

--- a/Blockbuster/Blockbuster.web.csproj
+++ b/Blockbuster/Blockbuster.web.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CreateMovieModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -206,7 +207,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -215,6 +215,16 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Blockbuster.Domain\Blockbuster.Domain.csproj">
+      <Project>{FF570144-6E77-4B9E-988C-204A5CE5A499}</Project>
+      <Name>Blockbuster.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Blockbuster.Repository\Blockbuster.Repository.csproj">
+      <Project>{53853DFC-053B-425C-98A4-2F150ED46479}</Project>
+      <Name>Blockbuster.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
