--- a/Blockbuster.repository/Blockbuster.repository.csproj
+++ b/Blockbuster.repository/Blockbuster.repository.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{843879CF-C7C7-4E87-9CBC-567B76D77764}</ProjectGuid>
+    <ProjectGuid>{53853DFC-053B-425C-98A4-2F150ED46479}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Blockbuster.repository</RootNamespace>
-    <AssemblyName>Blockbuster.repository</AssemblyName>
+    <RootNamespace>Blockbuster.Repository</RootNamespace>
+    <AssemblyName>Blockbuster.Repository</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,6 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,11 +45,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MovieRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\knockout-3.4.0.debug.js" />
-    <Content Include="Scripts\knockout-3.4.0.js" />
+    <ProjectReference Include="..\Blockbuster.Data\Blockbuster.Data.csproj">
+      <Project>{EA8DA055-1500-45E3-8A5B-03E257B04A3A}</Project>
+      <Name>Blockbuster.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Blockbuster.Domain\Blockbuster.Domain.csproj">
+      <Project>{FF570144-6E77-4B9E-988C-204A5CE5A499}</Project>
+      <Name>Blockbuster.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
